- CON-461: "Powered by" logo is fixed to the botton; Left menu follow all page content by vertical scroll bar; Gap between left menu and main logo was removed; Double scroll bar disappeared

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -220,7 +220,7 @@ body {
 }
 
 .layout{
-    margin-top: 14vh;
+    margin-top: 130px;
     max-height: 95vh;
 }
 .burgerMenu {
@@ -897,7 +897,7 @@ button {
 
 
 .welcomeText {
-    margin: 25px 25px 60px 25px;
+    margin: 25px 25px 40px 25px;
     text-transform: uppercase;
     width: 200px;
     float: left;
@@ -1283,7 +1283,7 @@ th {
     background-color: $color_background_1;
     font-size: 0.9rem;
     //margin-top: 13vh;
-    height: 100vh;
+    height: 100%;
     min-width: 17rem;
     color: $white;
     overflow: hidden;
